--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "async": "^2.0.1",
     "bluebird": "^3.4.1",
     "body-parser": "~1.15.1",
+    "bookshelf": "^0.10.0",
     "co": "^4.6.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "dotenv": "^2.0.0",
     "ejs": "~2.4.1",
     "express": "~4.13.4",
     "fs-promise": "^0.5.0",
     "handlebars": "^4.0.5",
+    "handlebars-layout": "^0.1.3",
+    "knex": "^0.11.10",
+    "lodash": "^4.15.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
   },
